Small improvments