@@ -83,6 +83,8 @@ lazy val userInterfacesCLI =
     .dependsOn(moduleCore)
     .settings(
       sharedSettings,
+      fork := true,
+      javaOptions ++= Seq("--add-opens", "java.base/java.nio=ALL-UNNAMED", "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED"),
       libraryDependencies ++= Seq(
         "dev.zio" %% "zio" % versions.zio
       )
